--- a/cfg/email.html
+++ b/cfg/email.html
@@ -11,7 +11,7 @@
         <tr>
             <th valign="middle"
                 style="height: 25px; line-height: 25px; padding: 15px 35px; border-bottom-width: 1px; border-bottom-style: solid; border-bottom-color: rgba(18, 24, 37, 0.87); background-color: #484f60; border-radius: 5px 5px 0 0;">
-                <font size="5" style="color: rgb(255, 255, 255); ">随心团队 </font>
+                <font size="5" style="color: rgb(255, 255, 255); ">登录验证</font>
             </th>
         </tr>
         <tr>
@@ -23,8 +23,8 @@
                         </span>
                     </h2>
                     <p>您正在<span style="color: dodgerblue;">登录随心</span>, 验证码为：
-                        <span style="color: #fd9827; font-size: xx-large; ">{{.Code}}</span>，有效期
-                        <span style="color: red">{{.Timeout}}</span>分钟,请尽快验证并保持其私密性，以保障您的账号安全。祝您使用愉快！
+                        <span style="color: #fd9827; font-size: xx-large; ">{{.Code}}</span>，
+                        有效期<span style="color: red">{{.Timeout}}</span>分钟,请尽快验证并保持其私密性，以保障您的账号安全。祝您使用愉快！
                     </p>
                     <p align="right">随心官方团队</p>
                     <p align="right">{{.Time}}</p>
