--- a/adm/index.html
+++ b/adm/index.html
@@ -1,13 +1,84 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
-  </body>
+<html lang='en'>
+<head>
+  <meta charset='UTF-8'>
+  <link rel='icon' href='/favicon.ico'>
+  <meta name='viewport' content='width=device-width, initial-scale=1.0'>
+  <title>Vite App</title>
+  <style type='text/css'>
+      html,
+      body,
+      #loader-wrapper {
+          width: 100%;
+          height: 100%;
+          background-color: #ffffff;
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+
+          .load_title {
+              margin-top: 30px;
+              color: #409EFF;
+              font-size: 16px;
+              line-height: 30px;
+          }
+      }
+
+      @keyframes spin {
+          0% {
+              transform: rotate(0deg);
+          }
+          100% {
+              transform: rotate(360deg);
+          }
+      }
+
+      #loader {
+          width: 50px;
+          height: 50px;
+          border-radius: 50%;
+          position: relative;
+          border: 3px solid transparent;
+          border-top-color: #409EFF;
+          animation: spin 2s linear infinite;
+
+
+          &:before {
+              content: '';
+              position: absolute;
+              top: 5px;
+              left: 5px;
+              right: 5px;
+              bottom: 5px;
+              border-radius: 50%;
+              border: 3px solid transparent;
+              border-top-color: #409EFF;
+              animation: spin 2s linear infinite;
+          }
+
+          &:after {
+              content: '';
+              position: absolute;
+              top: 15px;
+              left: 15px;
+              right: 15px;
+              bottom: 15px;
+              border-radius: 50%;
+              border: 3px solid transparent;
+              border-top-color: #409EFF;
+              animation: spin 2s linear infinite;
+          }
+      }
+  </style>
+</head>
+<body>
+<div id='app'>
+  <div id='loader-wrapper'>
+    <div id='loader'></div>
+    <div class='load_title'>正在努力加载中</div>
+  </div>
+</div>
+<script type='module' src='/src/main.ts'></script>
+</body>
 </html>
