✨ feat: 添加登录基础布局

--- a/adm/index.html
+++ b/adm/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang='en'>
+<html lang="en">
 <head>
-  <meta charset='UTF-8'>
-  <link rel='icon' href='/favicon.ico'>
-  <meta name='viewport' content='width=device-width, initial-scale=1.0'>
-  <title>Vite App</title>
-  <style type='text/css'>
+  <meta charset="UTF-8">
+  <link rel="icon" href="/favicon.ico">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Go Next Admin</title>
+  <style type="text/css">
       html,
       body,
       #loader-wrapper {
@@ -73,12 +73,12 @@
   </style>
 </head>
 <body>
-<div id='app'>
-  <div id='loader-wrapper'>
-    <div id='loader'></div>
-    <div class='load_title'>正在努力加载中</div>
+<div id="app">
+  <div id="loader-wrapper">
+    <div id="loader"></div>
+    <div class="load_title">正在努力加载中</div>
   </div>
 </div>
-<script type='module' src='/src/main.ts'></script>
+<script type="module" src="/src/main.ts"></script>
 </body>
 </html>
